--- a/WeatherPy/WIP_weatherPy.ipynb
+++ b/WeatherPy/WIP_weatherPy.ipynb
@@ -92,20 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=imperial&appid=f4541f3057b76b6edbbb8d1146731fc4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "url = \"http://api.openweathermap.org/data/2.5/weather?units=imperial&appid=\" + weather_api_key\n",
-    "print(url)"
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=imperial&appid=\" + weather_api_key\n"
    ]
   },
   {
